...
                }
                /// Stop game button.
                Button {
                    saveRecord()
                    selectedScene = .mainMenu
                } label: {
                    Image(systemName: "stop.circle")
                        .resizable()
                        .foregroundColor(Color("BoardDark"))
                }
                .aspectRatio(1.0, contentMode: .fit)
                .frame(maxWidth: 60, maxHeight: 60)
                .padding()
...
